<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Service Admin</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Setting</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_pages</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Icon</string>

    <!-- Home Fragment -->
    <string name="active_button">Active Service</string>
    <string name="inactive_button">Inactive Service</string>

    <!-- Page Fragment -->
    <string name="nama">Nama</string>
    <string name="time">Time</string>
    <string name="url">URL</string>
    <string name="status">Status</string>
    <string name="save">Save</string>

</resources>
