<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="82dp"
            android:ems="10"
            android:inputType="text"
            android:layout_marginBottom="20dp">
        </EditText>

        <EditText
            android:id="@+id/editTextStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/editTextUrl"
            android:layout_alignLeft="@+id/editTextUrl"
            android:layout_alignStart="@+id/editTextUrl"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:text="@string/nama"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="run"
            android:text="@string/save"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/editTextStatus"
            android:layout_alignStart="@+id/editTextStatus" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextStatus"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextTime"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignBottom="@+id/editTextUrl"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/editTextUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_below="@+id/editTextTime"
            android:ems="10"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextUrl"
            android:layout_below="@+id/editTextName"
            android:ems="10"
            android:inputType="phone|text"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp" />

    </RelativeLayout>
</ScrollView>